# greentoken-cardano

./: .gitignore  README-ANTIGO.md  README.md  RELATORIO.md  SETUP-CARDANO-LOCAL.md  SETUP-LOCAL-LINUX.md  SETUP-LOCAL-MAC.md  SETUP-LOCAL.md  advance-stage.sh  create-bottle.sh  create-user.sh  greentoken_db.session.sql  package-lock.json  plutus-greentoken.cabal  query-balance.sh  query-bottle.sh  setup-policy.sh  setup-wallet.sh
aiken/: README.md  aiken.toml
aiken/lib/greentoken/: types.ak
aiken/validators/: bottle.ak  greentoken.ak
app/: Main.hs  WriteBottleValidator.hs
assets/: .gitignore  bottle-validator.plutus  greentoken-policy.plutus
assets/datums/: datum-atstation.json  datum-collected.json  datum-compacted.json  datum-inserted.json  datum-newbottle-inserted.json  datum-shredded.json
assets/datums/bottle-1237/: datum-bottle-1237-atstation.json  datum-bottle-1237-collected.json  datum-bottle-1237-compacted.json  datum-bottle-1237-inserted.json  datum-bottle-1237-shredded.json
assets/policy/: policy.script  policyID
assets/redeemers/: mint-atstation.json  mint-collected.json  mint-compacted.json  mint-inserted.json  mint-shredded.json  redeemer-atstation-to-shredded.json  redeemer-collected-to-atstation.json  redeemer-compacted-to-collected.json  redeemer-inserted-to-compacted.json
assets/txs/: mint-bottle-1236.body  mint-bottle-1236.signed  mint-bottle-bottle-1237.body  mint-bottle-bottle-1237.signed  mint-bottleA.body  mint-bottleA.signed  mint-greentoken.body  mint-greentoken.signed  tx-advance-atstation.body  tx-advance-atstation.signed  tx-advance-bottle-1237-compacted.body  tx-advance-bottle-1237-compacted.signed  tx-advance-collected.body  tx-advance-collected.signed  tx-advance-compacted.body  tx-advance-compacted.signed  tx-advance-shredded.body  tx-advance-shredded.signed  tx-advance.body  tx-advance.signed  tx.body  tx.json  tx.raw  tx.signed
assets/users/user1/: user1.addr
assets/users/user2/: user2.addr
assets/users/user_leo/: user_leo.addr
assets/wallet/: bottle.addr  payment.addr
backend/: .env.example  README.md  greentoken_db_schema.html  package-lock.json  package.json
backend/db/: schema.sql
backend/db/migrations/: 001_container_volume_precision.sql  002_user_greenwallet_custody.sql  003_rewards_unique_bottle_stage.sql  004_user_pending_greenwallet.sql  005_user_password.sql
backend/src/: config.ts  index.ts  validate.ts
backend/src/auth/: jwt.ts  middleware.ts  passwords.ts
backend/src/db/: pool.ts
backend/src/greenwallet/: crypto.ts  mesh.ts
backend/src/routes/: auth.routes.ts  bottles.routes.ts  containers.routes.ts  operator.routes.ts  routes.routes.ts  stations.routes.ts  trucks.routes.ts  users.routes.ts
backend/src/services/: bottle.service.ts  cardano.service.ts  container.service.ts
backend/src/workers/: confirmation.worker.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/design/: Greentoken Station.html  README.md  container.jsx  shared.jsx  station.jsx
frontend/greenstation_design/: styles.css
frontend/src/: App.tsx  index.css
frontend/src/auth/: AuthContext.tsx  RequireRole.tsx
frontend/src/components/: Bottle.tsx  Container.tsx  InventoryBottle.tsx
frontend/src/hooks/: useIdleTimeout.ts  useSortable.ts
frontend/src/lib/: errors.ts  helpers.ts  labels.ts  types.ts  (+2 more)
offchain/test/: Main.hs
scripts/: _db-helper.sh  advance-stage.sh  build-contracts.sh  create-bottle.sh  create-user.sh  get-pubkey-hash.sh  import-user.sh  query-balance.sh  query-bottle.sh  setup-policy.sh  setup-wallet.sh  split-utxos.sh
(+54 files in other folders)
