cabal-version: 3.0
name: plutus-starter-kit
version: 0.2.1.0
synopsis: Plutus Hello World
description: A simple plutus starter template
author: rvcas, mercurial
maintainer: x@rvcas.dev, clark_alesna@hotmail.com
extra-source-files: CHANGELOG.md

library
  hs-source-dirs: onchain/src, offchain/src
  exposed-modules:
    Greentoken.BottleValidator
  build-depends:
    aeson,
    base ^>=4.14.1.0,
    bytestring,
    containers,
    cardano-api,
    data-default,
    freer-extras,
    plutus-contract,
    plutus-ledger,
    plutus-ledger-api,
    plutus-ledger-constraints,
    plutus-script-utils,
    plutus-tx-plugin,
    plutus-tx,
    text,
    serialise
  default-language: Haskell2010
  ghc-options:
    -Wall
    -fobject-code
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-spec-constr
    -fno-specialise

test-suite plutus-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: offchain/test
  main-is: Main.hs
  other-modules:
      Greentoken.BottleValidatorSpec
  build-depends:
      base,
      tasty,
      tasty-hunit,
      plutus-starter-kit,
      plutus-ledger-api,
      plutus-ledger,
      plutus-tx,
      plutus-script-utils,
      plutus-contract,
      text,
      bytestring
  default-language: Haskell2010

executable plutus-starter-kit
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base ^>=4.14.1.0,
    plutus-starter-kit >= 0.2.1.0,
    cardano-api,
    optparse-applicative-fork

executable write-bottle-validator
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: WriteBottleValidator.hs
  build-depends:
    base,
    plutus-starter-kit,
    cardano-api,
    bytestring
