cabal-version: 3.0
name: greentoken-bottle
version: 0.1.0.0
synopsis: Greentoken bottle lifecycle on Plutus
description: Bottle lifecycle validator and scripts for the Greentoken project
author: Leonardo Pereira Cortes
maintainer: leo.pereira.cortes@gmail.com

library
  hs-source-dirs: onchain/src, offchain/src
  exposed-modules:
    Greentoken.BottleValidator
  build-depends:
    aeson,
    base ^>=4.14.1.0,
    bytestring,
    containers,
    cardano-api,
    data-default,
    freer-extras,
    plutus-contract,
    plutus-ledger,
    plutus-ledger-api,
    plutus-ledger-constraints,
    plutus-script-utils,
    plutus-tx-plugin,
    plutus-tx,
    text,
    serialise
  default-language: Haskell2010
  ghc-options:
    -Wall
    -fobject-code
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-spec-constr
    -fno-specialise

test-suite greentoken-bottle-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: offchain/test
  main-is: Main.hs
  other-modules:
      Greentoken.BottleValidatorSpec
  build-depends:
      base,
      tasty,
      tasty-hunit,
      greentoken-bottle,
      plutus-ledger-api,
      plutus-ledger,
      plutus-tx,
      plutus-script-utils,
      plutus-contract,
      text,
      bytestring
  default-language: Haskell2010

executable bottle-validator-cli
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base ^>=4.14.1.0,
    greentoken-bottle,
    cardano-api,
    optparse-applicative-fork

executable write-bottle-validator
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: WriteBottleValidator.hs
  build-depends:
    base,
    greentoken-bottle,
    cardano-api,
    bytestring
